[package]
name = "rust-omfiles-tools"
version = "0.1.0"
edition = "2024"
description = "Tools for working with Open-Meteo files"
license = "GPL-2.0-only"
keywords = ["open-meteo", "weather", "forecast"]
categories = ["command-line-utilities"]

[dependencies]
omfiles-rs = { git = "https://github.com/open-meteo/rust-omfiles", branch = "main"}
ndarray = "0.16.1"
eframe = "0.22.0"

[[bin]]
name = "omdump"
path = "src/bin/omdump.rs"

[[bin]]
name = "omview"
path = "src/bin/omview.rs"

[[bin]]
name = "om_temporal_to_spatial"
path = "src/bin/om_temporal_to_spatial.rs"

[profile.dist]
inherits = "release"
lto = "thin"
